@@ -1,3 +1,8 @@
+2012-10-24 Wed  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildCmdPkgDevelStandardAbiVersion): New.
+	(CygbuildCmdPkgDevelStandardMain): Take another look (not ready).
+
 2012-10-23 Tue  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh (CygbuildInstallExtraBinFiles): Adjust message.
